cmake_minimum_required(VERSION 3.5)

option(BUILD_WITH_SHA224 "Build with SHA224 support" ON)
option(BUILD_WITH_SHA256 "Build with SHA256 support" ON)
option(BUILD_WITH_SHA384 "Build with SHA384 support" ON)
option(BUILD_WITH_SHA512 "Build with SHA512 support" ON)
option(BUILD_WITH_SHA512_224 "Build with SHA512/224 support" ON)
option(BUILD_WITH_SHA512_256 "Build with SHA512/256 support" ON)

project(sha2cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${PROJECT_NAME} Sha2.h main.cpp)

if(BUILD_WITH_SHA224)
    message(STATUS "Configure with SHA224 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA224)
endif()
if(BUILD_WITH_SHA256)
    message(STATUS "Configure with SHA256 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA256)
endif()
if(BUILD_WITH_SHA384)
    message(STATUS "Configure with SHA384 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA384)
endif()
if(BUILD_WITH_SHA512)
    message(STATUS "Configure with SHA512 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA512)
endif()
if(BUILD_WITH_SHA512_224)
    message(STATUS "Configure with SHA512/224 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA512_224)
endif()
if(BUILD_WITH_SHA512_256)
    message(STATUS "Configure with SHA512/256 support")
    target_compile_definitions(${PROJECT_NAME} PUBLIC -DWITH_SHA512_256)
endif()
